scripts/nullaway/annotator/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8.txt
../annotator/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Enseignant.java:48: error: [NullAway] dereferenced expression this.NotificationEmprunts is @Nullable
		if(!this.NotificationEmprunts.contains(emprunt))
		                             ^
    (see http://t.uber.com/nullaway )
../annotator/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Cours.java:66: error: [NullAway] assigning @Nullable expression to @NonNull field
		this.prof = prof;
		          ^
    (see http://t.uber.com/nullaway )
../annotator/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Projet.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
		etudiants = e;
		          ^
    (see http://t.uber.com/nullaway )
../annotator/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Etudiant.java:34: error: [NullAway] dereferenced expression empruntConcerne is @Nullable
		empruntConcerne.setCommentaire(com);
		               ^
    (see http://t.uber.com/nullaway )
4 errors
